--- a/book/engineer.tex
+++ b/book/engineer.tex
@@ -61,7 +61,7 @@
 \studfield{Informatyka}
 \studtype{Stacjonarne}
 \title{Projekt aplikacj webowej spoty-na-drony.pl, platformy udostępniającej lokalizacje do latania dronem}
-\engtitle{Web Application Project spoty-na-drony.pl, platform for sharing drone flying locations}
+\engtitle{Web application project spoty-na-drony.pl, platform for sharing drone flying locations}
 \acronym{Merkury}
 \titledate{2024-10-10} %todo jaka data tutaj ma byc
 \supervisor{mgr. inż. Adam Urbanowicz}
