Update project title and English translation for clarity in engineer.tex (#312)
* Update project title and English translation for clarity in engineer.tex

* Fix title formatting in engineer.tex for improved clarity

* Fix title formatting in engineer.tex for improved clarity

--- a/book/engineer.tex
+++ b/book/engineer.tex
@@ -60,8 +60,8 @@
 
 \studfield{Informatyka}
 \studtype{Stacjonarne}
-\title{Aplikacja webowa: spoty-na-drony.pl}
-\engtitle{Web application: spoty-na-drony.pl}
+\title{Projekt aplikacj webowej spoty-na-drony.pl, platformy udostępniającej lokalizacje do latania dronem}
+\engtitle{Web application project spoty-na-drony.pl, platform for sharing drone flying locations}
 \acronym{Merkury}
 \titledate{2024-10-10} %todo jaka data tutaj ma byc
 \supervisor{mgr. inż. Adam Urbanowicz}
