Fix title grammar in engineer.tex for clarity

--- a/book/engineer.tex
+++ b/book/engineer.tex
@@ -60,7 +60,7 @@
 
 \studfield{Informatyka}
 \studtype{Stacjonarne}
-\title{Projekt aplikacj webowej spoty-na-drony.pl, platformy udostępniającej lokalizacje do latania dronem}
+\title{Projekt aplikacji webowej spoty-na-drony.pl, platformy udostępniającej lokalizacje do latania dronem}
 \engtitle{Web application project spoty-na-drony.pl, platform for sharing drone flying locations}
 \acronym{Merkury}
 \titledate{2024-10-10} %todo jaka data tutaj ma byc
