Fix punctuation in project title and English translation in engineer.tex for clarity

--- a/book/engineer.tex
+++ b/book/engineer.tex
@@ -49,19 +49,19 @@
 \setcounter{secnumdepth}{3}
 \setcounter{tocdepth}{3}
 
-\hypersetup{
-    colorlinks=true,
-    linkcolor=blue,
-    urlcolor=blue,
-    citecolor=blue
-}
+%\hypersetup{
+%    colorlinks=true,
+%    linkcolor=blue,
+%    urlcolor=blue,
+%    citecolor=blue
+%}
 
 \input{glossary}
 
 \studfield{Informatyka}
 \studtype{Stacjonarne}
-\title{Projekt aplikacji webowej spoty-na-drony.pl, platformy udostępniającej lokalizacje do latania dronem}
-\engtitle{Web application project spoty-na-drony.pl, platform for sharing drone flying locations}
+\title{Projekt aplikacji webowej spoty-na-drony.pl. Platforma udostępniająca lokalizacje do latania dronem}
+\engtitle{Web application project spoty-na-drony.pl. Platform for sharing drone flying locations}
 \acronym{Merkury}
 \titledate{2024-10-10} %todo jaka data tutaj ma byc
 \supervisor{mgr. inż. Adam Urbanowicz}
