Update title and English translation for clarity in engineer.tex

--- a/book/engineer.tex
+++ b/book/engineer.tex
@@ -49,21 +49,21 @@
 \setcounter{secnumdepth}{3}
 \setcounter{tocdepth}{3}
 
-%\hypersetup{
-%    colorlinks=true,
-%    linkcolor=blue,
-%    urlcolor=blue,
-%    citecolor=blue
-%}
+\hypersetup{
+    colorlinks=true,
+    linkcolor=blue,
+    urlcolor=blue,
+    citecolor=blue
+}
 
 \input{glossary}
 
 \studfield{Informatyka}
 \studtype{Stacjonarne}
-\title{Projekt aplikacji webowej spoty-na-drony.pl. Platforma udostępniająca lokalizacje do latania dronem}
-\engtitle{Web application project spoty-na-drony.pl. Platform for sharing drone flying locations}
+\title{Projekt aplikacji webowej spoty-na-drony.pl. Platforma udostępniająca lokalizacje do latania dronem.}
+\engtitle{The spoty-na-drony.pl Web Application Project – A Platform Providing Locations for Drone Flying.}
 \acronym{Merkury}
-\titledate{2024-10-10} %todo jaka data tutaj ma byc
+\titledate{2024-10-10}
 \supervisor{mgr. inż. Adam Urbanowicz}
 \reviewer{dr. Elżbieta Puźniakowska-Gałuch}
 
